# Material-MC

./: .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MC.cpp  MMC  READEME.md  README.md  README_ZH.md  _hamiltonian_8h_source.html  _m_c__structure_8h_source.html  afterdoc_8h_source.html  agents.md  annotated.html  annotated_dup.js  autolink_8cpp.html  autolink_8cpp.js  bug.html  class_8h_source.html  class_a-members.html  class_a.html  class_afterdoc___test-members.html  class_afterdoc___test.html  class_afterdoc___test.js  class_autolink___test-members.html  class_autolink___test.html  class_b-members.html  class_b.html  class_base_site-members.html  class_base_site.html  class_c-members.html  class_c.html  class_c1.html  class_c2.html  class_c3.html  class_c4.html  class_c5.html  class_d-members.html  (+146 more)
.claude/agents/: check.md  debug.md  dispatch.md  implement.md  research.md
.claude/hooks/: inject-subagent-context.py
.github/workflows/: CI.yml  doc.yml  main.yml  python-publish.yml  release.yml
.opencode/agents/: check.md  debug.md  dispatch.md  implement.md  research.md  trellis-plan.md
.opencode/plugin/: inject-subagent-context.js
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/03-30-kh-bond-input/: prd.md  task.json
.trellis/tasks/03-30-kh-hamiltonian/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/03-30-kh-validation/: debug.jsonl  implement.jsonl  task.json
.trellis/tasks/03-30-kh-xsf-color/: prd.md  task.json
.trellis/tasks/03-30-kitaev-heisenberg-mc/: prd.md  task.json
.trellis/tasks/03-30-spec-relative-paths/: task.json
.trellis/tasks/03-31-kh-bond-classify-pbc/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/04-01-04-01-kitaev-epsilon-tolerance-input/: debug.jsonl  implement.jsonl  task.json
.trellis/tasks/04-01-cpp-include-to-header/: prd.md  task.json
.trellis/tasks/04-11-fix-vesta-kh-bond-vector/: task.json
.trellis/tasks/04-11-fix-vesta-parallel-lines/: check.jsonl  debug.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/04-11-migrate-scnlib-latest/: check.jsonl  debug.jsonl  implement.jsonl  prd.md  task.json
benchmark/2D_Heisenberg/: CMakeLists.txt  benchmark.py  hybrid_cf.py  hybrid_cpp_function.cpp  hybrid_pf.py  hybrid_python_function.cpp  pure_cpp.cpp
benchmark/World-Line Quantum Monte Carlo/: CMakeLists.txt  Spinless-Fermions.cpp
benchmark/multi_process/: CMakeLists.txt  benchmark.py  heisenberg.cpp  heisenberg_mpi.py
custom/: custom.cpp  custom.h
docs/: header.html
docs/source/: architecture.rst  ba2niiro6_tutorial.rst  conf.py  index.rst  input_toml_tutorial.rst  log_output_tutorial.rst  output_files_tutorial.rst
example/: Ba2NiIrO6.vasp  POSCAR  input.toml  input.txt
example/Ba2NiIrO6/: input.toml
example/anisotropy_3/: POSCAR  input.toml  input.txt
example/kh_minimal/: POSCAR  VALIDATION_CHECKLIST.md  input.toml
script/: plot.py  sub.sh
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_9.js  classes_d.js  enums_3.js  files_4.js  functions_1.js  functions_10.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_f.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js
src/: Hamiltonian.cpp  Hamiltonian.h  Hamiltonion.cpp  Hamiltonion.h  MC_structure.cpp  MC_structure.h  MMC.cpp  configure_in.cpp  configure_in.h  constants.h  initialization.cpp  initialization.h  log.cpp  log.h  random_function.cpp  random_function.h  result_out.cpp  result_out.h  rotation.cpp  rotation.h  spin_out.cpp  spin_out.h  structure_in.cpp  structure_in.h
src/base/: graph.cpp
src/material-monte-carlo/: __init__.py
src/methods/: classical.cpp  classical.h  local_update.cpp  local_update.h  parallel_tempering.cpp  parallel_tempering.h
test/: test.py
(+43 files in other folders)
